# factoids

./: CHANGELOG.md  README.md  default.nix  factoids.cabal
src/Data/: Factoid.hs
src/Data/Factoid/: Schema.hs
test/: Test.hs
